# verdi-chord

./: .gitignore  .travis-ci.sh  .travis.yml  Makefile  README.md  THEORY.md  chord-serialized.install  chord-serialized.opam  chord.install  chord.opam  configure  verdi-chord-checkproofs.opam  verdi-chord-proofalytics.opam  verdi-chord.opam  words100.txt
.ssh/: config
.travis/: travis_rsa.enc  travis_rsa.pub
config/: deploy.rb
config/deploy/: production.rb
core/: DynamicNet.v  DynamicNetLemmas.v
doc/: FILES.md  QUESTIONS.md  STYLE.md  admits.md  implementing-zave-chord.md  phase-three.md  phase-two.md  tom-chord.md
extraction/chord/: .gitignore  Makefile
extraction/chord-serialized/: Makefile
extraction/chord-serialized/coq/: ExtractChordSerialized.v
extraction/chord-serialized/ml/: ChordSerializedArrangement.ml  ChordUtil.ml  chordserialized.ml  client.ml
extraction/chord-serialized/scripts/: demo.py
extraction/chord/coq/: ExtrOcamlNatInt32.v  ExtractChord.v  ExtractChordShed.v
extraction/chord/ml/: ChordArrangement.ml  ChordShedArrangement.ml  ChordUtil.ml  DynamicShim.ml  ShedShim.ml  chord.ml  client.ml
extraction/chord/scripts/: demo.py  experiment_3.sh  head.json.oddity  oddity.sh  tail.json.oddity  trace_client.sh  trace_ring.sh
lib/: Bitvectors.v  IDSpace.v  InfSeqTactics.v  Sorting.v
lib/capistrano/tasks/: chord.rake  chord_java.rake  chord_serialized.rake  compilation.rake
proofalytics/: admits-links.awk  build-times-links.awk  mkreport.sh  plot.sh  proof-times-links.awk  publish.sh
script/: coqproject.sh
shed/: ChordShed.v  DynamicShed.v  Shed.v
systems/: Bitvectors.v  Chord.v  ChordCorrect.v  ChordCorrectPhaseOne.v  ChordCorrectPhaseThree.v  ChordCorrectPhaseTwo.v  ChordCorrectness.v  ChordDeadNodesGoQuiet.v  ChordDefinitionLemmas.v  ChordHandlerLemmas.v  ChordLabeled.v  ChordLabeledLemmas.v  ChordLocalProps.v  ChordPhaseOne.v  ChordPhaseTwo.v  ChordPromises.v  ChordProof.v  ChordQueryInvariant.v  ChordSemantics.v  ChordSystemLemmas.v  ChordSystemReachable.v  ChordTickInvariant.v  ChordValidPointersInvariant.v  ExtrOcamlNatInt32.v  IDSpace.v  IdentifierSpaces.v  InfSeqTactics.v  LiveNodesStayLive.v  Measure.v  Sorting.v
systems/chord/: Chord.v  ChordCorrectPhaseOne.v  ChordCorrectPhaseThree.v  ChordCorrectPhaseTwo.v  ChordStabilization.v
systems/chord-props/: DeadNodesGoQuiet.v  FirstSuccNeverSelf.v  HashInjective.v  LiveNodeHasTickInTimeouts.v  LiveNodeInSuccLists.v  LiveNodePreservation.v  LiveNodesNotClients.v  LiveNodesStayLive.v  NodesAlwaysHaveLiveSuccs.v  NodesHaveState.v  NodesNotJoinedHaveNoSuccessors.v  PredNeverSelfInvariant.v  PtrCorrectInvariant.v  PtrsJoined.v  QueriesEventuallyStop.v  QueriesEventuallyStopMeasure.v  QueryInvariant.v  QueryTargetsJoined.v  RingCorrect.v  Stabilize2Matches.v  StabilizeOnlyWithFirstSucc.v  SuccessorNodesAlwaysValid.v  TickInvariant.v  TimeoutMeansActive.v  ValidPointersInvariant.v  WfPtrPredInvariant.v  WfPtrSuccListInvariant.v
systems/chord-serialized/: ChordSerialized.v  ChordSerializedCorrect.v  ChordSerializedCorrectPhaseOne.v  ChordSerializedSimulations.v
systems/chord-util/: ChannelLemmas.v  HandlerLemmas.v  LabeledLemmas.v  LabeledMeasures.v  LabeledWF.v  PairIn.v  SystemLemmas.v  SystemPointers.v  SystemReachable.v
systems/chordpy/: README.md
systems/props/: DeadNodesGoQuiet.v  FirstSuccNeverSelf.v  LiveNodeHasTickInTimeouts.v  NodesAlwaysHaveLiveSuccs.v  NodesNotJoinedHaveNoSuccessors.v  PredNeverSelfInvariant.v  PtrCorrectInvariant.v  QueriesEventuallyStop.v  StabilizeOnlyWithFirstSucc.v  SuccessorNodesAlwaysValid.v  WfPtrPredInvariant.v  WfPtrSuccListInvariant.v
systems/util/: ChordLabeledLemmas.v  ChordLabeledMeasures.v
