opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-chord"
dev-repo: "https://github.com/DistributedComponents/verdi-chord.git"
bug-reports: "https://github.com/DistributedComponents/verdi-chord/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" "chord-serialized" ]
]
available: [ ocaml-version >= "4.02.3" ]
depends: [
  "coq" {((>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~"))}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.7~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "InfSeqExt" {= "dev"}
  "verdi-runtime" {= "dev"}
  "cheerios" {= "dev"}
  "cheerios-runtime" {= "dev"}
  "ocamlbuild" {build}
]

authors: [
  "Ryan Doenges <>"
  "Doug Woos <>"
  "Karl Palmskog <>"
  "Zachary Tatlock <>"
  "James Wilcox <>"
  "Justin Adsuara <>"
]
