opam-version: "1.2"
name: "chord"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-chord"
dev-repo: "https://github.com/DistributedComponents/verdi-chord.git"
bug-reports: "https://github.com/DistributedComponents/verdi-chord/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" "chord" ]
]
available: [ ocaml-version >= "4.02.3" ]
depends: [
  "coq" {>= "8.6" & < "8.7~"}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.7~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "InfSeqExt" {= "dev"}
  "verdi-runtime" {= "dev"}
  "ocamlbuild" {build}
]

authors: [
  "Ryan Doenges <>"
]
