opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-chord"
dev-repo: "https://github.com/DistributedComponents/verdi-chord.git"
bug-reports: "https://github.com/DistributedComponents/verdi-chord/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" "chord" ]
]
available: [ ocaml-version >= "4.02.3" ]
depends: [
  "coq" {>= "8.7" & < "8.9~"}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.8~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "InfSeqExt" {= "dev"}
  "verdi-runtime" {= "dev"}
  "cheerios" {= "dev"}
  "ocamlbuild" {build}
  "yojson" {>= "1.4.1"}
]

authors: [
  "Ryan Doenges <>"
  "Doug Woos <>"
  "Karl Palmskog <>"
  "Zachary Tatlock <>"
  "James Wilcox <>"
  "Justin Adsuara <>"
]
