opam-version: "1.2"
name: "verdi-chord"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-chord"
dev-repo: "https://github.com/DistributedComponents/verdi-chord.git"
bug-reports: "https://github.com/DistributedComponents/verdi-chord/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" ]
]
depends: [
  "coq" {>= "8.5" & < "8.6~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "InfSeqExt" {= "dev"}
]

authors: [
  "Ryan Doenges <>"
]
