opam-version: "1.2"
name: "verdi-chord"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-chord"
dev-repo: "https://github.com/DistributedComponents/verdi-chord.git"
bug-reports: "https://github.com/DistributedComponents/verdi-chord/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" ]
]
depends: [
  "coq" {((>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~"))}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.7~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "InfSeqExt" {= "dev"}
#  "coq-dpdgraph" {>= "0.6.2"}
]

authors: [
  "Ryan Doenges <>"
  "Karl Palmskog <>"
  "Doug Woos <>"
  "Zachary Tatlock <>"
  "James Wilcox <>"
]
