opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-chord"
dev-repo: "https://github.com/DistributedComponents/verdi-chord.git"
bug-reports: "https://github.com/DistributedComponents/verdi-chord/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" ]
]
depends: [
  "coq" {>= "8.7" & < "8.9~"}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.8~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "cheerios" {= "dev"}
  "InfSeqExt" {= "dev"}
]

authors: [
  "Ryan Doenges <>"
  "Karl Palmskog <>"
  "Doug Woos <>"
  "Zachary Tatlock <>"
  "James Wilcox <>"
  "Justin Adsuara <>"
]
